// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notification views fetches notifications omitting mentions and replies for taken-down posts 1`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "dan.test",
      "labels": Array [],
      "viewer": Object {
        "following": "record(1)",
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "repost",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(2)",
      },
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "dan.test",
      "labels": Array [],
      "viewer": Object {
        "following": "record(1)",
      },
    },
    "cid": "cids(2)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(2)",
      },
    },
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(4)",
        "following": "record(5)",
      },
    },
    "cid": "cids(3)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(2)",
    },
    "uri": "record(4)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(4)",
        "following": "record(5)",
      },
    },
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "reply",
    "reasonSubject": "record(7)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(5)",
          "uri": "record(7)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(2)",
        },
      },
      "text": "indeed",
    },
    "uri": "record(6)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(4)",
        "following": "record(5)",
      },
    },
    "cid": "cids(6)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(9)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(7)",
        "uri": "record(9)",
      },
    },
    "uri": "record(8)",
  },
  Object {
    "author": Object {
      "did": "user(1)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(4)",
        "following": "record(5)",
      },
    },
    "cid": "cids(8)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(2)",
      },
    },
    "uri": "record(10)",
  },
  Object {
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(10)@jpeg",
      "description": "hi im bob",
      "did": "user(3)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(11)",
        "following": "record(12)",
      },
    },
    "cid": "cids(9)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(2)",
    },
    "uri": "record(11)",
  },
  Object {
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(10)@jpeg",
      "description": "hi im bob",
      "did": "user(3)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(11)",
        "following": "record(12)",
      },
    },
    "cid": "cids(11)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [
      Object {
        "cid": "cids(11)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "did:example:labeler",
        "uri": "record(13)",
        "val": "test-label",
      },
      Object {
        "cid": "cids(11)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "did:example:labeler",
        "uri": "record(13)",
        "val": "test-label-2",
      },
    ],
    "reason": "reply",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.images",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "image": Object {
              "$type": "blob",
              "mimeType": "image/jpeg",
              "ref": Object {
                "$link": "cids(12)",
              },
              "size": 4114,
            },
          },
        ],
      },
      "reply": Object {
        "parent": Object {
          "cid": "cids(1)",
          "uri": "record(2)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(2)",
        },
      },
      "text": "hear that label_me label_me_2",
    },
    "uri": "record(13)",
  },
  Object {
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(10)@jpeg",
      "description": "hi im bob",
      "did": "user(3)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(11)",
        "following": "record(12)",
      },
    },
    "cid": "cids(13)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(9)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(7)",
        "uri": "record(9)",
      },
    },
    "uri": "record(14)",
  },
  Object {
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(10)@jpeg",
      "description": "hi im bob",
      "did": "user(3)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(11)",
        "following": "record(12)",
      },
    },
    "cid": "cids(14)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(2)",
      },
    },
    "uri": "record(15)",
  },
]
`;

exports[`notification views fetches notifications without a last-seen 1`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "dan.test",
      "labels": Array [],
      "viewer": Object {
        "following": "record(1)",
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "repost",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(2)",
      },
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "dan.test",
      "labels": Array [],
      "viewer": Object {
        "following": "record(1)",
      },
    },
    "cid": "cids(2)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "mention",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.record",
        "record": Object {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
      },
      "facets": Array [
        Object {
          "features": Array [
            Object {
              "$type": "app.bsky.richtext.facet#mention",
              "did": "user(1)",
            },
          ],
          "index": Object {
            "byteEnd": 18,
            "byteStart": 0,
          },
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "dan.test",
      "labels": Array [],
      "viewer": Object {
        "following": "record(1)",
      },
    },
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(2)",
      },
    },
    "uri": "record(5)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(6)",
        "following": "record(7)",
      },
    },
    "cid": "cids(5)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(1)",
    },
    "uri": "record(6)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(6)",
        "following": "record(7)",
      },
    },
    "cid": "cids(6)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "reply",
    "reasonSubject": "record(9)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(7)",
          "uri": "record(9)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(2)",
        },
      },
      "text": "indeed",
    },
    "uri": "record(8)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(6)",
        "following": "record(7)",
      },
    },
    "cid": "cids(8)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "reply",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(1)",
          "uri": "record(2)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(2)",
        },
      },
      "text": "of course",
    },
    "uri": "record(10)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(6)",
        "following": "record(7)",
      },
    },
    "cid": "cids(9)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(12)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(10)",
        "uri": "record(12)",
      },
    },
    "uri": "record(11)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(6)",
        "following": "record(7)",
      },
    },
    "cid": "cids(11)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(2)",
      },
    },
    "uri": "record(13)",
  },
  Object {
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(13)@jpeg",
      "description": "hi im bob",
      "did": "user(3)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(14)",
        "following": "record(15)",
      },
    },
    "cid": "cids(12)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(1)",
    },
    "uri": "record(14)",
  },
  Object {
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(13)@jpeg",
      "description": "hi im bob",
      "did": "user(3)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(14)",
        "following": "record(15)",
      },
    },
    "cid": "cids(14)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [
      Object {
        "cid": "cids(14)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "did:example:labeler",
        "uri": "record(16)",
        "val": "test-label",
      },
      Object {
        "cid": "cids(14)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "did:example:labeler",
        "uri": "record(16)",
        "val": "test-label-2",
      },
    ],
    "reason": "reply",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.images",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "image": Object {
              "$type": "blob",
              "mimeType": "image/jpeg",
              "ref": Object {
                "$link": "cids(15)",
              },
              "size": 4114,
            },
          },
        ],
      },
      "reply": Object {
        "parent": Object {
          "cid": "cids(1)",
          "uri": "record(2)",
        },
        "root": Object {
          "cid": "cids(1)",
          "uri": "record(2)",
        },
      },
      "text": "hear that label_me label_me_2",
    },
    "uri": "record(16)",
  },
  Object {
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(13)@jpeg",
      "description": "hi im bob",
      "did": "user(3)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(14)",
        "following": "record(15)",
      },
    },
    "cid": "cids(16)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(12)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(10)",
        "uri": "record(12)",
      },
    },
    "uri": "record(17)",
  },
  Object {
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(4)/cids(13)@jpeg",
      "description": "hi im bob",
      "did": "user(3)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(14)",
        "following": "record(15)",
      },
    },
    "cid": "cids(17)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "like",
    "reasonSubject": "record(2)",
    "record": Object {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(2)",
      },
    },
    "uri": "record(18)",
  },
]
`;

exports[`notification views generates notifications for quotes 1`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "handle": "carol.test",
      "labels": Array [],
      "viewer": Object {},
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "repost",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(1)",
        "uri": "record(1)",
      },
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(2)/cids(3)@jpeg",
      "description": "its me!",
      "did": "user(1)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
      },
    },
    "cid": "cids(2)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [],
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(3)",
    },
    "uri": "record(2)",
  },
  Object {
    "author": Object {
      "avatar": "https://bsky.public.url/image/sig()/rs:fill:1000:1000:1:0/plain/user(2)/cids(3)@jpeg",
      "description": "its me!",
      "did": "user(1)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "viewer": Object {
        "followedBy": "record(2)",
      },
    },
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": Array [
      Object {
        "cid": "cids(4)",
        "cts": "1970-01-01T00:00:00.000Z",
        "neg": false,
        "src": "did:example:labeler",
        "uri": "record(3)",
        "val": "test-label",
      },
    ],
    "reason": "quote",
    "reasonSubject": "record(1)",
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": Object {
        "$type": "app.bsky.embed.record",
        "record": Object {
          "cid": "cids(1)",
          "uri": "record(1)",
        },
      },
      "text": "yoohoo label_me",
    },
    "uri": "record(3)",
  },
]
`;
